Fix: Adjusted YT level text spacing and dialogue lines, and logic to answer

--- a/levels/level-youtube/level-youtube.css
+++ b/levels/level-youtube/level-youtube.css
@@ -86,6 +86,7 @@ html {
     text-align: center;
     /* border: solid 2px orange; */
     width: 30%;
+    margin-top: -70px;
 }
 
 #passwordYTInput {
